# code-janitor

./: .env.example  .gitignore  INTEGRATION_TEST_RESULTS.md  README.md  app.py  janitor.yaml  pyproject.toml  requirements.txt  test_sample.py  verify_vercel.py
config/: default.yaml
janitor/: __init__.py  cli.py  config.py
janitor/core/: __init__.py  analyzer.py  backup.py  linter.py  refactorer.py  resources.py  validator.py
janitor/db/: models.py  session.py
janitor/utils/: __init__.py  ai_client.py  file_ops.py  formatting.py  report.py
janitor/web/: app.py
janitor/web/templates/: index.html
